<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonsub">-</string>
    <string name="buttonmul">*</string>
    <string name="button10">.</string>
    <string name="buttonC">C</string>
    <string name="button0">0</string>
    <string name="buttoneql">=</string>
    <string name="buttondiv">/</string>
    <string name="buttonadd">+</string>

    <dimen name="text_size_small">14sp</dimen>
    <dimen name="text_size_medium">18sp</dimen>
    <dimen name="text_size_large">22sp</dimen>
</resources>
