<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/texter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_large"/>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/texter"
        android:layout_marginTop="60dp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:layout_marginLeft="20dp"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignBottom="@+id/button4"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignTop="@+id/button4"
        android:text="@string/button6" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/button7" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignTop="@+id/button7"
        android:text="@string/button8" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignTop="@+id/button7"

        android:text="@string/button9" />

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button3"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/buttonadd" />


    <Button
        android:id="@+id/buttonsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonadd"
        android:layout_alignStart="@+id/buttonadd"
        android:layout_alignLeft="@+id/buttonadd"
        android:layout_alignEnd="@+id/buttonadd"
        android:layout_alignRight="@+id/buttonadd"
        android:layout_alignTop="@+id/button4"
        android:text="@string/buttonsub" />

    <Button
        android:id="@+id/buttonmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonsub"
        android:layout_alignStart="@+id/buttonsub"
        android:layout_alignLeft="@+id/buttonsub"
        android:layout_alignRight="@+id/buttonsub"
        android:layout_alignTop="@+id/button7"
        android:text="@string/buttonmul" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toLeftOf="@+id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/button10" />

    <Button
        android:id="@+id/button0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_below="@+id/button8"
        android:layout_alignTop="@+id/button10"
        android:text="@string/button0" />

    <Button
        android:id="@+id/buttonC"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignTop="@+id/button10"
        android:text="@string/buttonC" />

    <Button
        android:id="@+id/buttondiv"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonmul"
        android:layout_alignStart="@+id/buttonmul"
        android:layout_alignLeft="@+id/buttonmul"
        android:layout_alignEnd="@+id/buttonmul"
        android:layout_alignRight="@+id/buttonmul"
        android:layout_alignTop="@+id/button10"
        android:text="@string/buttondiv" />

    <Button
        android:id="@+id/buttoneql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button0"
        android:layout_alignStart="@+id/button10"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignEnd="@+id/buttondiv"
        android:layout_alignRight="@+id/buttondiv"
        android:layout_marginTop="30dp"
        android:text="@string/buttoneql" />

</RelativeLayout>